Fixing bug 224952. Making uri attributes default to empty string in stead of null for compatibility with IE. r=caillon@aillon.org, sr=bzbarsky@mit.edu, a=dbaron@dbaron.org